--- a/src/DeepReinforcementLearning/run.ipynb
+++ b/src/DeepReinforcementLearning/run.ipynb
@@ -56,8 +56,8 @@
     "\n",
     "import os\n",
     "print(os.getcwd())\n",
-    "str = os.getcwd()\n",
-    "if (not \"DeepReinforcementLearning\" in str):\n",
+    "current = os.getcwd()\n",
+    "if (not \"DeepReinforcementLearning\" in current):\n",
     "    os.chdir(os.getcwd() + \"\\\\DeepReinforcementLearning\") # changing to current dir\n",
     "\n",
     "from game import Game, GameState\n",
